# agentman

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-bake.hcl
.github/workflows/: bake-version-bump.yml  docker.yml
docker/: versions.env
gateway/: Cargo.toml
gateway/examples/: agentman-gateway.service  gateway.toml
gateway/src/: config.rs  docker.rs  gateway_control.rs  github.rs  main.rs  ssh.rs  state.rs
scripts/: bake.sh  build.sh  check-bake-versions.py  docker-entrypoint.sh  push.sh  setup-ssh-keys.sh
