[package]
name = "agentman-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bollard = "0.19"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0"
futures = "0.3"
reqwest = { version = "0.13"}
russh = "0.56.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "signal", "time", "sync", "fs"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
